--- a/index.html
+++ b/index.html
@@ -210,22 +210,21 @@
 
           <div class="contact-inputs">
             <div class="input1">
-              <label for="email" class="label">Email</label>
+              <label for="email1" class="label">Email</label>
               <input class="input" type="email" name="email" id="email1" placeholder="Email">
             </div>
 
             <div class="input1">
-
-              <label for="label" class="label">Phone number</label>
-              <input class="input" type="number" name="number" id="number1" placeholder="Phone number">
+              <label for="number1" class="label">Phone number</label>
+              <input class="input" type="tel" name="number" id="number1" placeholder="Phone number">
             </div>
 
             <div class="input1">
-              <label for="name" class="label">Email</label>
-              <input class="input" type="text" name="name" id="name1" placeholder="name">
+              <label for="name1" class="label">Name</label>
+              <input class="input" type="text" name="name" id="name1" placeholder="Name">
             </div>
-
           </div>
+
           <div class="Frame6"
             style="width: 398px; height: 48px; padding-left: 24px; padding-right: 24px; padding-top: 12px; padding-bottom: 12px; background: #172129; border-radius: 6px; justify-content: center; align-items: center; gap: 6px; display: inline-flex">
             <div class="ContactUs"
