--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lesson 33</title>
+  <link rel="stylesheet" href="./js/swiper.min.css">
   <link rel="stylesheet" href="./scss/style.css" />
 </head>
 
@@ -39,9 +40,7 @@
         <div class="hero-wrapper">
           <h1 class="hero-h1">Where Ideas Flourish, AlfaCell Delivers</h1>
 
-          <p class="hero-p">Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis dolor. <br />Voluptate
-            exercitation incididunt
-            aliquip</p>
+
         </div>
       </div>
     </section>
@@ -96,66 +95,259 @@
         </div>
       </div>
     </section>
-    <section class="process-section">
-      <div class="container">
-        <div class="process-wrapper">
-          <div class="process-1">
-            <div class="process-11">
-              <div class="webFront">Web/Front End Development</div>
-              <div class="theProcess">
-                The process of creating the visual and interactive components of a website or web application that
-                users
-                interact with directly. Frontend developers work on the client side, focusing on the presentation
-                layer
-                of
-                a website to ensure that it is visually appealing, responsive, and functions well across various
-                devices
-                and browsers
-              </div>
-              <div class="skills">Skill Sets:</div>
-              <div class="htmlcss">HTML, CSS, JavaScript (React.js/Angular/Vue.js)</div>
-              <buttom class="contactUs">
-                <p class="contact-p">Contact us</p>
-                <div class="arrowRightSvg">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="22" height="23" viewBox="0 0 22 23" fill="none">
-                    <path d="M4.58301 11.6855H17.4163" stroke="#172129" stroke-width="2" stroke-linecap="round"
-                      stroke-linejoin="round" />
-                    <path d="M11 5.26904L17.4167 11.6857L11 18.1024" stroke="#172129" stroke-width="2"
-                      stroke-linecap="round" stroke-linejoin="round" />
-                  </svg>
+    <div class="swiper-container">
+      <a class="swiper-button-next"></a>
+      <a class="swiper-button-prev"></a>
+      <!-- <div class="swiper-scrollbar"></div> -->
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <section class="process-section">
+            <div class="container">
+              <div class="process-wrapper">
+                <div class="process-1">
+                  <div class="process-11">
+                    <div class="webFront">Web/Front End Development</div>
+                    <div class="theProcess">
+                      The process of creating the visual and interactive components of a website or
+                      web application that
+                      users
+                      interact with directly. Frontend developers work on the client side, focusing on
+                      the presentation
+                      layer
+                      of
+                      a website to ensure that it is visually appealing, responsive, and functions
+                      well across various
+                      devices
+                      and browsers
+                    </div>
+                    <div class="skills">Skill Sets:</div>
+                    <div class="htmlcss">HTML, CSS, JavaScript (React.js/Angular/Vue.js)</div>
+                    <buttom class="contactUs">
+                      <p class="contact-p">Contact us</p>
+                      <div class="arrowRightSvg">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="23" viewBox="0 0 22 23" fill="none">
+                          <path d="M4.58301 11.6855H17.4163" stroke="#172129" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                          <path d="M11 5.26904L17.4167 11.6857L11 18.1024" stroke="#172129" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                      </div>
+                    </buttom>
+
+
+                  </div>
+
+                  <img class="Rectangle13" src="https://via.placeholder.com/510x392" />
                 </div>
-              </buttom>
+
+                <div class="process-2">
+                  <div class="process-item">
+                    <img class="process-img" src="https://via.placeholder.com/266x217" />
+                  </div>
+                  <div class="process-item">
+                    <img class="process-img" src="https://via.placeholder.com/266x217" />
+                  </div>
+                  <div class="process-item">
+                    <img class="process-img" src="https://via.placeholder.com/266x217" />
+                  </div>
+                  <div class="process-item">
+                    <img class="process-img" src="https://via.placeholder.com/266x217" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+        </div>
+        <div class="swiper-slide" style="background-image:url(img/14.jpg)">
+          <section class="process-section">
+            <div class="container">
+              <div class="process-wrapper">
+                <div class="process-1">
+                  <div class="process-11">
+                    <div class="webFront">Web/Front End Development</div>
+                    <div class="theProcess">
+                      The process of creating the visual and interactive components of a website or
+                      web application that
+                      users
+                      interact with directly. Frontend developers work on the client side, focusing on
+                      the presentation
+                      layer
+                      of
+                      a website to ensure that it is visually appealing, responsive, and functions
+                      well across various
+                      devices
+                      and browsers
+                    </div>
+                    <div class="skills">Skill Sets:</div>
+                    <div class="htmlcss">HTML, CSS, JavaScript (React.js/Angular/Vue.js)</div>
+                    <buttom class="contactUs">
+                      <p class="contact-p">Contact us</p>
+                      <div class="arrowRightSvg">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="23" viewBox="0 0 22 23" fill="none">
+                          <path d="M4.58301 11.6855H17.4163" stroke="#172129" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                          <path d="M11 5.26904L17.4167 11.6857L11 18.1024" stroke="#172129" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                      </div>
+                    </buttom>
 
 
-            </div>
+                  </div>
 
-            <img class="Rectangle13" src="https://via.placeholder.com/510x392" />
-          </div>
+                  <img class="Rectangle13" src="https://via.placeholder.com/510x392" />
+                </div>
 
-          <div class="process-2">
-            <div class="process-item">
-              <img class="process-img" src="https://via.placeholder.com/266x217" />
+                <div class="process-2">
+                  <div class="process-item">
+                    <img class="process-img" src="https://via.placeholder.com/266x217" />
+                  </div>
+                  <div class="process-item">
+                    <img class="process-img" src="https://via.placeholder.com/266x217" />
+                  </div>
+                  <div class="process-item">
+                    <img class="process-img" src="https://via.placeholder.com/266x217" />
+                  </div>
+                  <div class="process-item">
+                    <img class="process-img" src="https://via.placeholder.com/266x217" />
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="process-item">
-              <img class="process-img" src="https://via.placeholder.com/266x217" />
+          </section>
+        </div>
+        <div class="swiper-slide" style="background-image:url(img/15.jpg)">
+          <section class="process-section">
+            <div class="container">
+              <div class="process-wrapper">
+                <div class="process-1">
+                  <div class="process-11">
+                    <div class="webFront">Web/Front End Development</div>
+                    <div class="theProcess">
+                      The process of creating the visual and interactive components of a website or
+                      web application that
+                      users
+                      interact with directly. Frontend developers work on the client side, focusing on
+                      the presentation
+                      layer
+                      of
+                      a website to ensure that it is visually appealing, responsive, and functions
+                      well across various
+                      devices
+                      and browsers
+                    </div>
+                    <div class="skills">Skill Sets:</div>
+                    <div class="htmlcss">HTML, CSS, JavaScript (React.js/Angular/Vue.js)</div>
+                    <buttom class="contactUs">
+                      <p class="contact-p">Contact us</p>
+                      <div class="arrowRightSvg">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="23" viewBox="0 0 22 23" fill="none">
+                          <path d="M4.58301 11.6855H17.4163" stroke="#172129" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                          <path d="M11 5.26904L17.4167 11.6857L11 18.1024" stroke="#172129" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                      </div>
+                    </buttom>
+
+
+                  </div>
+
+                  <img class="Rectangle13" src="https://via.placeholder.com/510x392" />
+                </div>
+
+                <div class="process-2">
+                  <div class="process-item">
+                    <img class="process-img" src="https://via.placeholder.com/266x217" />
+                  </div>
+                  <div class="process-item">
+                    <img class="process-img" src="https://via.placeholder.com/266x217" />
+                  </div>
+                  <div class="process-item">
+                    <img class="process-img" src="https://via.placeholder.com/266x217" />
+                  </div>
+                  <div class="process-item">
+                    <img class="process-img" src="https://via.placeholder.com/266x217" />
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="process-item">
-              <img class="process-img" src="https://via.placeholder.com/266x217" />
+          </section>
+        </div>
+        <div class="swiper-slide">
+          <section class="process-section">
+            <div class="container">
+              <div class="process-wrapper">
+                <div class="process-1">
+                  <div class="process-11">
+                    <div class="webFront">Web/Front End Development</div>
+                    <div class="theProcess">
+                      The process of creating the visual and interactive components of a website or
+                      web application that
+                      users
+                      interact with directly. Frontend developers work on the client side, focusing on
+                      the presentation
+                      layer
+                      of
+                      a website to ensure that it is visually appealing, responsive, and functions
+                      well across various
+                      devices
+                      and browsers
+                    </div>
+                    <div class="skills">Skill Sets:</div>
+                    <div class="htmlcss">HTML, CSS, JavaScript (React.js/Angular/Vue.js)</div>
+                    <buttom class="contactUs">
+                      <p class="contact-p">Contact us</p>
+                      <div class="arrowRightSvg">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="23" viewBox="0 0 22 23" fill="none">
+                          <path d="M4.58301 11.6855H17.4163" stroke="#172129" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                          <path d="M11 5.26904L17.4167 11.6857L11 18.1024" stroke="#172129" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                      </div>
+                    </buttom>
+
+
+                  </div>
+
+                  <img class="Rectangle13" src="https://via.placeholder.com/510x392" />
+                </div>
+
+                <div class="process-2">
+                  <div class="process-item">
+                    <img class="process-img" src="https://via.placeholder.com/266x217" />
+                  </div>
+                  <div class="process-item">
+                    <img class="process-img" src="https://via.placeholder.com/266x217" />
+                  </div>
+                  <div class="process-item">
+                    <img class="process-img" src="https://via.placeholder.com/266x217" />
+                  </div>
+                  <div class="process-item">
+                    <img class="process-img" src="https://via.placeholder.com/266x217" />
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="process-item">
-              <img class="process-img" src="https://via.placeholder.com/266x217" />
-            </div>
-          </div>
+          </section>
         </div>
       </div>
-    </section>
+      <!-- Add Pagination -->
+      <div class="swiper-pagination">
+
+      </div>
+    </div>
+
+
+
     <section class="about-section">
       <div class="container">
         <div class="about-wrapper">
           <div class="about-info">
             <h3 class="about-h3">About us</h3>
-            <p class="about-p">Nemo enim ipsam
-              voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur ma</p>
+
           </div>
           <div class="about-1">
             <div class="about-card11">
@@ -278,10 +470,33 @@
     window.addEventListener("scroll", function () {
       var header = document.querySelector("header");
       header.classList.toggle("sticky", window.scrollY > 27);
-      console.log(header.classList);
     });
   </script>
+  <script src="./js/swiper.min.js"></script>
+  <script>
+    var swiper = new Swiper('.swiper-container', {
+      effect: 'coverflow',
+      grabCursor: false,
+      centeredSlides: true,
+      slidesPerView: 'auto',
+      coverflowEffect: {
+        rotate: 0,
+        stretch: 0,
+        depth: 10,
 
+        modifier: 0,
+        slideShadows: true,
+      },
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
+      navigation: { // исправлена ошибка в названии объекта
+        nextEl: '.swiper-button-next', // исправлено название свойства
+        prevEl: '.swiper-button-prev', // исправлено название свойства
+      }
+    });
+  </script>
 </body>
 
 </html>
