--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           </section>
 
         </div>
-        <div class="swiper-slide" style="background-image:url(img/14.jpg)">
+        <div class="swiper-slide">
           <section class="process-section">
             <div class="container">
               <div class="process-wrapper">
@@ -217,7 +217,7 @@
             </div>
           </section>
         </div>
-        <div class="swiper-slide" style="background-image:url(img/15.jpg)">
+        <div class="swiper-slide">
           <section class="process-section">
             <div class="container">
               <div class="process-wrapper">
