--- a/index.html
+++ b/index.html
@@ -81,13 +81,8 @@
 
   </header>
   <main>
-    <div class="typewriter">
-      <div class="slide"><i></i></div>
-      <div class="paper"></div>
-      <div class="keyboard"></div>
-    </div>
-    <h1>Hali tayyor emas!!</h1>
-    <!-- <section class="hero-section">
+
+    <section class="hero-section">
       <div class="hero-bg">
         <video id="myVideo" class="gif" autoplay loop muted loading="lazy">
           <source id="gif1" src="./image/1237828_Backgrounds_Abstract_Pattern_1920x1080.mp4" type="video/mp4">
@@ -102,7 +97,7 @@
 
         </div>
       </div>
-    </section> -->
+    </section>
 
 
     <!-- <section class="category-section">
