--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         </div>
       </div>
     </section> -->
-    <!-- <section class="about-section">
+    <section class="about-section">
       <div class="container">
         <div class="about-wrapper">
           <div class="about-info">
@@ -420,7 +420,7 @@
 
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- <section class="contact-section">
       <video class="contact-gif" autoplay loop muted>
         <source id="gif1" src="./image/1237828_Backgrounds_Abstract_Pattern_1920x1080.mp4" type="video/mp4">
